<resources>
    <string name="app_name">Task5_Single_activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="music">Music</string>
    <string name="nav_to_fighters">Fighters</string>
    <string name="nav_to_attack_planes">Attack planes</string>
    <string name="nav_to_interceptors">Interceptors</string>
    <string name="nav_to_bombers">Bombers</string>
    <string name="fighter">Fighter</string>
</resources>