<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:enabled="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:enabled="true"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:enabled="true"
        android:title="@string/notifications" />

    <item
        android:id="@+id/musicFragment"
        android:icon="@drawable/ic_baseline_music_note_24"
        android:enabled="true"
        android:title="@string/music" />

</menu>